k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
    spec:
      containers:
        - name: products-api
          image: coffee-shop-products-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9090
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: images-api
  template:
    metadata:
      labels:
        app: images-api
    spec:
      containers:
        - name: images-api
          image: coffee-shop-images-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency
spec:
  replicas: 2
  selector:
    matchLabels:
      app: currency
  template:
    metadata:
      labels:
        app: currency
    spec:
      containers:
        - name: currency
          image: coffee-shop-currency:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 9092
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 5
