k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
  namespace: coffee-shop
spec:
  type: ClusterIP
  selector:
    app: products-api
  ports:
    - name: http
      port: 9090
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: images-api-service
  namespace: coffee-shop
spec:
  type: ClusterIP
  selector:
    app: images-api
  ports:
    - name: http
      port: 9091
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: currency-service
  namespace: coffee-shop
spec:
  type: ClusterIP
  selector:
    app: currency
  ports:
    - name: grpc
      port: 9092
      targetPort: grpc
